change result json to a proper format
