# src/Serializer/ResultSerializer.php
@@ -15,10 +15,23 @@ class ResultSerializer
 
     public function serialize(array $result): array
     {
-        $serializedResult['assignments'] = array_map(fn (array $assignment): array => array_map(fn (Person $person): string => $person->id, $assignment['addedPeople']), $this->resultService->getShiftAssignments($result));
-        $serializedResult['calculatedShifts'] = $this->resultService->getAllCalculatedShifts($result);
+        $serializedResult['assignments'] = $this->serializeAssignemnts($this->resultService->getShiftAssignments($result));
+        $serializedResult['personalResults'] = $this->resultService->getAllCalculatedShifts($result);
         $serializedResult['rating'] = $this->resultService->getRating($result);
 
         return $serializedResult;
+    }
+
+    private function serializeAssignemnts(array $resultAssignments): array
+    {
+        $assignments = [];
+        foreach ($resultAssignments as $shiftId => $shiftValues) {
+            $assignments[] = [
+                'shiftId' => $shiftId,
+                'personIds' => array_map(fn (Person $person): string => $person->id, $shiftValues['addedPeople']),
+            ];
+        }
+
+        return $assignments;
     }
 }
